force-app/main/default/objects/Transaction__c/fields/Currency_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Currency_Quantity__c</fullName>
    <label>Currency Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>