force-app/main/default/objects/Transaction__c/fields/Dollar_value__c.field-meta.xml
<CustomField>
    <fullName>Dollar_value__c</fullName>
    <label>Dollar value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>