force-app/main/default/objects/Transaction__c/fields/Related_Cryptocurrency__c.field-meta.xml
<CustomField>
    <fullName>Related_Cryptocurrency__c</fullName>
    <label>Related Cryptocurrency</label>
    <referenceTo>Cryptocurrency__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>